<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.fragment.LoginFragment">

    <LinearLayout
        android:id="@+id/linear_layout_login_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/email_editText_loginFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/secondaryColor"/>

        <EditText
            android:id="@+id/password_editText_loginFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/ic_lock"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:backgroundTint="@color/secondaryColor"/>

        <CheckBox
            android:id="@+id/password_checkBox_loginFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/show_password"
            android:buttonTint="@color/secondaryColor"/>

        <TextView
            android:id="@+id/forget_password_textView_loginFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/forget_password"
            android:textColor="#8F8D8D"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/register_textView_loginFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/register"
            android:textColor="@color/secondaryColor"
            android:textSize="18sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/enter_frameLayout_loginFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/enter"
            android:textColor="@color/primaryTextColor"
            android:textSize="22sp"
            android:textStyle="bold" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>