<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".controller.fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider_image_fragment_home"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#000000" />

<!--        <androidx.viewpager.widget.ViewPager-->
<!--            android:id="@+id/slid_show_view_pager"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="219dp"-->
<!--            android:background="@drawable/ic_launcher_background" />-->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_button_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/date_product"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/date_product_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/date_product_recycler_view"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginTop="10dp" />-->

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/popularity_product"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/popularity_product_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/popularity_product_recycler_view"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginTop="10dp" />-->

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/rating_product"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/rating_product_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/rating_product_recycler_view"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginTop="10dp" />-->

        </FrameLayout>

    </LinearLayout>
</ScrollView>